fixed ad spacing on "dedicated merchant" pages

--- a/style-upromise.css
+++ b/style-upromise.css
@@ -1655,6 +1655,11 @@ top:10%;
 	height:135px;	
 }
 
+.article #paid_placement_two .col-md-4 {
+	height:auto;
+	margin-bottom:0px;
+}
+
 
 #paid_placement_one a {
 	xwidth:120px;	
